# tkp-project-foreman

./: .gitignore  CHECKSUMS.sha256  KNOWN_LIMITATIONS.md  LICENSE  PROJECT_DESCRIPTION.md  PUBLIC_RELEASE_PRIVACY_RECEIPT.json  PUBLIC_RELEASE_TEST_RECEIPT.txt  README.md  RELEASE.json  Run_Project_Foreman.bat  Run_Project_Foreman.ps1  SECURITY.md  SEMANTIC_SOURCE_ALIGNMENT_RECEIPT.json  SEMANTIC_TRACE_REPAIR_RECEIPT.json  pyproject.toml
extensions/governed-token-continuity/: BUILD_STATUS.json  BUILD_STATUS_AUTHORITY.md  BUILD_STATUS_TEST_RECEIPT.json  CONTROL_STATE.md  FORMATION_RECEIPT.json  GATE_4A_0_CLOSURE_POINTER.md  GATE_4A_0_EXCEPTION_REGISTER.json  README.md  Run_Build_Status.bat  pyproject.toml  run_build_status.sh
extensions/governed-token-continuity/assets/: README.md
extensions/governed-token-continuity/build_status/: README.md  __init__.py  cli.py  engine.py  model.py  render.py
extensions/governed-token-continuity/contracts/: README.md
extensions/governed-token-continuity/controls/: PF_GTC_Gate_3_Non_Destructive_Errata_v1.0.1.md  PF_GTC_Gate_4A_0_Authorization_Receipt_v1.0.0.md
extensions/governed-token-continuity/docs/: PF_GTC_Gate_4A_0_Primary_Reference_Addendum_v0.1.0.md  REFERENCE_AND_AUTHORITY.md
extensions/governed-token-continuity/receipts/: PF_GTC_Contract_Schema_Pack_Receipt_v0.2.0.json  PF_GTC_Execution_Platform_Receipt_v0.1.0.json  PF_GTC_Gate_4A_0_Closure_Receipt_v0.1.0.json  PF_GTC_Offline_Wheelhouse_and_Lock_Receipt_v0.1.0.json  PF_GTC_Tokenizer_Asset_Receipt_v0.1.0.json
extensions/governed-token-continuity/schemas/: README.md
(+28 files in other folders)
